<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.coviddata.ui.worlddata.WorldDataViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.worlddata.WorldDataFragment">

        <Button
            android:id="@+id/historyWorldDataButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/covid_history_btn_text"
            app:layout_constraintBottom_toTopOf="@+id/gridLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.15" />

        <GridLayout
            android:id="@+id/gridLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:columnCount="2"
            android:orientation="horizontal"
            android:useDefaultMargins="true"
            app:visibilityView="@{viewModel.worldDataHistoryLiveData}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/world_data_cases_title_textView"
                style="@style/data_title_GridLayout"
                android:text="@string/cases_textView" />

            <TextView
                android:id="@+id/world_data_cases_number_textView"
                style="@style/data_number_GridLayout"
                android:text="@{Integer.toString(viewModel.worldDataLiveData.cases)}" />

            <TextView
                android:id="@+id/world_data_deaths_title_textView"
                style="@style/data_title_GridLayout"
                android:text="@string/deaths_textView" />

            <TextView
                android:id="@+id/world_data_deaths_number_textView"
                style="@style/data_number_GridLayout"
                android:text="@{Integer.toString(viewModel.worldDataLiveData.deaths)}" />

            <TextView
                android:id="@+id/world_data_recovered_title_textView"
                style="@style/data_title_GridLayout"
                android:text="@string/recovered_textView" />

            <TextView
                android:id="@+id/world_data_recovered_number_textView"
                style="@style/data_number_GridLayout"
                android:text="@{Integer.toString(viewModel.worldDataLiveData.recovered)}" />
        </GridLayout>

        <Button
            android:id="@+id/refreshWorldDataButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewModel.refreshAllCases()}"
            android:text="@string/RefreshWorldDataButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gridLayout" />

        <TextView
            android:id="@+id/exceptionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.worldExceptionLiveData.toString()}"
            android:textSize="@dimen/data_textSize"
            android:textStyle="bold"
            app:visibilityView="@{viewModel.worldExceptionLiveData}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>